--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a data-bağ="genel" href="https://www.facebook.com/groups/1818283228485179/">KATIL</a>
           </p>
           <p style="font-size:16pt; text-align:center; color:#ccc;">
-            <i class="fa fa-html5" aria-hidden="true"></i>
+            <i class="fa fa-html5" aria-hidden="true"></i>.
             <i class="fa fa-css3" aria-hidden="true"></i>
           </p>
         </div>
