--- a/belgeler/kurulum.html
+++ b/belgeler/kurulum.html
@@ -31,7 +31,7 @@
         <p>Deveb kullanımı için yapmanız gereken sadece CSS dosyasını dahil etmenizdir.<br><br></p>
           <pre style='color:#000000;background:#ffffff;'><span style='color:#a65700; '>&lt;</span><span style='color:#800000; font-weight:bold; '>link</span><span style='color:#274796; '> </span><span style='color:#074726; '>href</span><span style='color:#808030; '>=</span><span style='color:#0000e6; '>"/css/deveb.css"</span><span style='color:#274796; '> </span><span style='color:#074726; '>rel</span><span style='color:#808030; '>=</span><span style='color:#0000e6; '>"stylesheet"</span><span style='color:#a65700; '>></span></pre>
 
-        <p><br><a href="https://data-deveb.github.io/assets/css/deveb.css">Deveb'i buradan indirebilirsiniz...</a></p>
+        <p><br><a href="https://data-deveb.github.io/assets/css/deveb.css">Deveb'i buradan indirebilirsiniz..</a></p>
       </div>
     </div>
   </div>
