--- a/belgeler/kurulum.html
+++ b/belgeler/kurulum.html
@@ -1,30 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Deveb Önyüz İskeleti</title>
-
-  <!-- Kök -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;subset=latin-ext" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet">
-  <link rel="stylesheet" href="https://data-deveb.github.io/assets/css/font-awesome.min.css">
-  <link href="https://data-deveb.github.io/assets/css/deveb.css" rel="stylesheet"><link href="https://data-deveb.github.io/assets/css/deveb.ilkel.css" rel="stylesheet">
-  <link href="https://data-deveb.github.io/assets/css/ie/deveb.ilkel.ie.css" rel="stylesheet">
-  <link href="../assets/css/deveb.genel.css" rel="stylesheet">
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-</head>
-<body class="kap ortala">
-  <div class="header" data-deveb="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
-  <div data-gnl="23 24p">
+---
+layout: default
+---
     <div data-deveb="kaplama" data-gnl="24" data-ufk="24 24p">
       <div data-gnl="24">
         <h1>Deveb Kurulumu</h1>
@@ -34,9 +10,3 @@
         <p><br><a href="https://data-deveb.github.io/assets/css/deveb.css">Deveb'i buradan indirebilirsiniz..</a></p>
       </div>
     </div>
-  </div>
-  <div data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
-  <script src="https://data-deveb.github.io/assets/js/not-for-deveb-w3.js"></script>
-  <script>w3.includeHTML();</script>
-</body>
-</html>
