Dosyalar temaya gömüldü.

--- a/belgeler/takim.html
+++ b/belgeler/takim.html
@@ -1,85 +1,50 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Deveb Önyüz İskeleti</title>
+---
+layout: default
+---
+<h1>Takımlar</h1>
+<p>Her takımın kendine ait bir görevi vardır. Bu takımlara istenildiği zaman katılabilir ve ayrılabilirsiniz. Takımlar bir işi çözmek için anlık olarak iş süreçleri oluştururlar. Sadık kalınan bir iş gidişatları yoktur.</p>
 
-  <!-- Kök -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;subset=latin-ext" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet">
-  <link rel="stylesheet" href="https://data-deveb.github.io/assets/css/font-awesome.min.css">
-  <link href="https://data-deveb.github.io/assets/css/deveb.css" rel="stylesheet"><link href="https://data-deveb.github.io/assets/css/deveb.ilkel.css" rel="stylesheet">
-  <link href="https://data-deveb.github.io/assets/css/ie/deveb.ilkel.ie.css" rel="stylesheet">
-  <link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
-
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-</head>
-<body>
-  <div data-deveb="1 1p" class="header" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
-
-  <div data-deveb="24p kaplama ortada">
-    <div data-deveb="23">
-      <h1>Takımlar</h1>
-      <p>Her takımın kendine ait bir görevi vardır. Bu takımlara istenildiği zaman katılabilir ve ayrılabilirsiniz. Takımlar bir işi çözmek için anlık olarak iş süreçleri oluştururlar. Sadık kalınan bir iş gidişatları yoktur.</p>
-
-    <div class="arala-1 dışkenar-0 metin-orta" data-deveb="1 1p ufk-2 ufk-2p ort-3 ort-3p">
-      <div data-deveb="1 ufk-1 ort-1">
-        <p>
-          <i class="fa fa-microchip beri-2" style="font-size:60pt;"></i> <br>
-          <span class="metin-olumlu">Örgü Takımı</span> <br>
-          Deveb iskeletini geliştirmek üzere bir araya gelerek tüm grupları etkileyen işler yaparlar
-        </p>
-      </div>
-      <div data-deveb="1 ufk-1 ort-1">
-        <p>
-          <i class="fa fa-briefcase beri-2" style="font-size:60pt;"></i> <br>
-          <span class="metin-olumlu">Örnek Takımı</span> <br>
-          Deveb kullanarak yapılabilecek her şeye basit bir örnek çıkarmak için bir araya gelirler
-        </p>
-      </div>
-      <div data-deveb="1 ufk-1 ort-1">
-        <p>
-          <i class="fa fa-star beri-2" style="font-size:60pt;"></i> <br>
-          <span class="metin-olumlu">Başarım Takımı</span> <br>
-          Deveb kullanımı sırasında yolunda gitmeyen şeyleri çözmek için bir araya gelirler
-        </p>
-      </div>
-      <div data-deveb="1 ufk-1 ort-1">
-        <p>
-          <i class="fa fa-microchip beri-2" style="font-size:60pt;"></i> <br>
-          <span class="metin-olumlu">Görüş Takımı</span> <br>
-          Deveb hakkında izlenimlerini, fikirlerini, beklentilerinidata-ortaya koymak için bir araya gelirler
-        </p>
-      </div>
-      <div data-deveb="1 ufk-1 ort-1">
-        <p>
-          <i class="fa fa-briefcase beri-2" style="font-size:60pt;"></i> <br>
-          <span class="metin-olumlu">Belge Takımı</span> <br>
-          Deveb hakkında gerek duyulacak her türlü belgeyi oluşturmak için bir araya gelirler
-        </p>
-      </div>
-      <div data-deveb="1 ufk-1 ort-1">
-        <p>
-          <i class="fa fa-star beri-2" style="font-size:60pt;"></i> <br>
-          <span class="metin-olumlu">Yardım Takımı</span> <br>
-          Deveb kullanımı konusunda yardıma ihtiyaç duyulan herhangi bir noktada çözüm için bir araya gelirler
-        </p>
-      </div>
-    </div>
-      </div>
+<div class="arala-1 dışkenar-0 metin-orta" data-deveb="1 1p ufk-2 ufk-2p ort-3 ort-3p">
+  <div data-deveb="1 ufk-1 ort-1">
+    <p>
+      <i class="fa fa-microchip beri-2" style="font-size:60pt;"></i> <br>
+      <span class="metin-olumlu">Örgü Takımı</span> <br>
+      Deveb iskeletini geliştirmek üzere bir araya gelerek tüm grupları etkileyen işler yaparlar
+    </p>
   </div>
-
-<div data-deveb="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
-<script src="https://data-deveb.github.io/assets/js/not-for-deveb-w3.js"></script>
-<script>w3.includeHTML();</script>
-</body>
-</html>
+  <div data-deveb="1 ufk-1 ort-1">
+    <p>
+      <i class="fa fa-briefcase beri-2" style="font-size:60pt;"></i> <br>
+      <span class="metin-olumlu">Örnek Takımı</span> <br>
+      Deveb kullanarak yapılabilecek her şeye basit bir örnek çıkarmak için bir araya gelirler
+    </p>
+  </div>
+  <div data-deveb="1 ufk-1 ort-1">
+    <p>
+      <i class="fa fa-star beri-2" style="font-size:60pt;"></i> <br>
+      <span class="metin-olumlu">Başarım Takımı</span> <br>
+      Deveb kullanımı sırasında yolunda gitmeyen şeyleri çözmek için bir araya gelirler
+    </p>
+  </div>
+  <div data-deveb="1 ufk-1 ort-1">
+    <p>
+      <i class="fa fa-microchip beri-2" style="font-size:60pt;"></i> <br>
+      <span class="metin-olumlu">Görüş Takımı</span> <br>
+      Deveb hakkında izlenimlerini, fikirlerini, beklentilerinidata-ortaya koymak için bir araya gelirler
+    </p>
+  </div>
+  <div data-deveb="1 ufk-1 ort-1">
+    <p>
+      <i class="fa fa-briefcase beri-2" style="font-size:60pt;"></i> <br>
+      <span class="metin-olumlu">Belge Takımı</span> <br>
+      Deveb hakkında gerek duyulacak her türlü belgeyi oluşturmak için bir araya gelirler
+    </p>
+  </div>
+  <div data-deveb="1 ufk-1 ort-1">
+    <p>
+      <i class="fa fa-star beri-2" style="font-size:60pt;"></i> <br>
+      <span class="metin-olumlu">Yardım Takımı</span> <br>
+      Deveb kullanımı konusunda yardıma ihtiyaç duyulan herhangi bir noktada çözüm için bir araya gelirler
+    </p>
+  </div>
+</div>
