--- a/belgeler/baglar.html
+++ b/belgeler/baglar.html
@@ -1,165 +1,133 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Deveb Önyüz İskeleti</title>
+---
+layout: default
+---
+<div data-gnl="23">
+  <h2>Metin Bağı - Etkin / Engelli</h2>
+  <a data-bağ="metin" href="#">BAĞ</a>&nbsp;
+  <a data-bağ="metin engelli" href="#">BAĞ engelli</a>
+</div>
+<div data-gnl="23">
+  <h2>Basmalı Metin Bağı - Etkin / Engelli</h2>
+  <a data-bağ="genel" href="#">BAĞ</a>&nbsp;
+  <a data-bağ="genel engelli" href="#">BAĞ engelli</a>
+</div>
+<div data-gnl="23">
+  <h2>Basma Bağ - Etkin / Engelli</h2>
+  <button data-bağ="genel" type="button" name="button">genel</button>&nbsp;
+  <button data-bağ="genel engelli" type="button" name="button">genel engelli</button>
+</div>
+<div data-deveb="göbekte" data-gnl="23">
+  <h2>Basma Bağ - Boyutlarına göre</h2>
+  <button data-bağ="genel mnk" type="button" name="button">data-bağ="genel mnk"</button>&nbsp;
+  <button data-bağ="genel ufk" type="button" name="button">data-bağ="genel ufk"</button>&nbsp;
+  <button data-bağ="genel" type="button" name="button">data-bağ="genel"</button>&nbsp;
+  <button data-bağ="genel ort" type="button" name="button">data-bağ="genel ort"</button>&nbsp;
+  <button data-bağ="genel byk" type="button" name="button">data-bağ="genel byk"</button>&nbsp;
+  <button data-bağ="genel dev" type="button" name="button">data-bağ="genel dev"</button>&nbsp;
+</div>
 
-  <!-- Kök -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;subset=latin-ext" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet">
-  <link rel="stylesheet" href="https://data-deveb.github.io/assets/css/font-awesome.min.css">
-  <link href="https://data-deveb.github.io/assets/css/deveb.css" rel="stylesheet"><link href="https://data-deveb.github.io/assets/css/deveb.ilkel.css" rel="stylesheet">
-  <link href="https://data-deveb.github.io/assets/css/ie/deveb.ilkel.ie.s1.css" rel="stylesheet">
-  <link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
-  <link href="../assets/css/deveb.ilkel.css" rel="stylesheet">
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-</head>
-<body>
-  <div data-gnl="1 1p" class="header" w3-include-html="/temel/header.html"></div>
-  <div data-deveb="kaplama ortada" data-gnl="24 24p" data-ort="24 24p">
-
-    <div data-gnl="23">
-      <h2>Metin Bağı - Etkin / Engelli</h2>
-      <a data-bağ="metin" href="#">BAĞ</a>&nbsp;
-      <a data-bağ="metin engelli" href="#">BAĞ engelli</a>
-    </div>
-    <div data-gnl="23">
-      <h2>Basmalı Metin Bağı - Etkin / Engelli</h2>
-      <a data-bağ="genel" href="#">BAĞ</a>&nbsp;
-      <a data-bağ="genel engelli" href="#">BAĞ engelli</a>
-    </div>
-    <div data-gnl="23">
-      <h2>Basma Bağ - Etkin / Engelli</h2>
-      <button data-bağ="genel" type="button" name="button">genel</button>&nbsp;
-      <button data-bağ="genel engelli" type="button" name="button">genel engelli</button>
-    </div>
-    <div data-deveb="göbekte" data-gnl="23">
-      <h2>Basma Bağ - Boyutlarına göre</h2>
-      <button data-bağ="genel mnk" type="button" name="button">data-bağ="genel mnk"</button>&nbsp;
-      <button data-bağ="genel ufk" type="button" name="button">data-bağ="genel ufk"</button>&nbsp;
-      <button data-bağ="genel" type="button" name="button">data-bağ="genel"</button>&nbsp;
-      <button data-bağ="genel ort" type="button" name="button">data-bağ="genel ort"</button>&nbsp;
-      <button data-bağ="genel byk" type="button" name="button">data-bağ="genel byk"</button>&nbsp;
-      <button data-bağ="genel dev" type="button" name="button">data-bağ="genel dev"</button>&nbsp;
-    </div>
-
-    <div data-deveb="göbekte" data-gnl="23">
-      <h2>Basmal Bağlar</h2>
-      <h3>Hafif</h3>
-      <input data-bağ="hafif mnk" type="checkbox" id="hafif-mnk" value="">
-      <label for="hafif-mnk"></label>
-      <input data-bağ="hafif ufk" type="checkbox" id="hafif-ufk" value="">
-      <label for="hafif-ufk"></label>
-      <input data-bağ="hafif" type="checkbox" id="hafif" value="">
-      <label for="hafif"></label>
-      <input data-bağ="hafif ort" type="checkbox" id="hafif-ort" value="">
-      <label for="hafif-ort"></label>
-      <input data-bağ="hafif byk" type="checkbox" id="hafif-byk" value="">
-      <label for="hafif-byk"></label>
-      <input data-bağ="hafif dev" type="checkbox" id="hafif-dev" value="">
-      <label for="hafif-dev"></label>
-    </div>
-    <div data-deveb="göbekte" data-gnl="23">
-      <h3>Yumuşak</h3>
-      <input data-bağ="yumuşak mnk" type="checkbox" id="yumuşak-mnk" value="">
-      <label for="yumuşak-mnk"></label>
-      <input data-bağ="yumuşak ufk" type="checkbox" id="yumuşak-ufk" value="">
-      <label for="yumuşak-ufk"></label>
-      <input data-bağ="yumuşak" type="checkbox" id="yumuşak" value="">
-      <label for="yumuşak"></label>
-      <input data-bağ="yumuşak ort" type="checkbox" id="yumuşak-ort" value="">
-      <label for="yumuşak-ort"></label>
-      <input data-bağ="yumuşak byk" type="checkbox" id="yumuşak-byk" value="">
-      <label for="yumuşak-byk"></label>
-      <input data-bağ="yumuşak dev" type="checkbox" id="yumuşak-dev" value="">
-      <label for="yumuşak-dev"></label>
-    </div>
-    <div data-deveb="göbekte" data-gnl="23">
-      <h3>Yassı</h3>
-      <input data-bağ="yassı mnk" type="checkbox" id="yassı-mnk" value="">
-      <label for="yassı-mnk"></label>
-      <input data-bağ="yassı ufk" type="checkbox" id="yassı-ufk" value="">
-      <label for="yassı-ufk"></label>
-      <input data-bağ="yassı" type="checkbox" id="yassı" value="">
-      <label for="yassı"></label>
-      <input data-bağ="yassı ort" type="checkbox" id="yassı-ort" value="">
-      <label for="yassı-ort"></label>
-      <input data-bağ="yassı byk" type="checkbox" id="yassı-byk" value="">
-      <label for="yassı-byk"></label>
-      <input data-bağ="yassı dev" type="checkbox" id="yassı-dev" value="">
-      <label for="yassı-dev"></label>
-    </div>
-    <div data-deveb="göbekte" data-gnl="23">
-      <h3>Eğik</h3>
-      <input data-bağ="eğik mnk" type="checkbox" id="eğik-mnk" value="">
-      <label for="eğik-mnk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
-      <input data-bağ="eğik ufk" type="checkbox" id="eğik-ufk" value="">
-      <label for="eğik-ufk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
-      <input data-bağ="eğik" type="checkbox" id="eğik" value="">
-      <label for="eğik" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
-      <input data-bağ="eğik ort" type="checkbox" id="eğik-ort" value="">
-      <label for="eğik-ort" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
-      <input data-bağ="eğik byk" type="checkbox" id="eğik-byk" value="">
-      <label for="eğik-byk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
-      <input data-bağ="eğik dev" type="checkbox" id="eğik-dev" value="">
-      <label for="eğik-dev" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
-    </div>
-    <div data-deveb="göbekte" data-gnl="23">
-      <h3>Çevrik</h3>
-      <input data-bağ="çevrik mnk" type="checkbox" id="çevrik-mnk" value="">
-      <label for="çevrik-mnk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
-      <input data-bağ="çevrik ufk" type="checkbox" id="çevrik-ufk" value="">
-      <label for="çevrik-ufk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
-      <input data-bağ="çevrik" type="checkbox" id="çevrik" value="">
-      <label for="çevrik" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
-      <input data-bağ="çevrik ort" type="checkbox" id="çevrik-ort" value="">
-      <label for="çevrik-ort" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
-      <input data-bağ="çevrik byk" type="checkbox" id="çevrik-byk" value="">
-      <label for="çevrik-byk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
-      <input data-bağ="çevrik dev" type="checkbox" id="çevrik-dev" value="">
-      <label for="çevrik-dev" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
-    </div>
-    <div data-deveb="göbekte" data-gnl="23">
-      <h3>Simge</h3>
-      <input data-bağ="simge mnk" type="checkbox" id="simge-mnk" value="">
-      <label for="simge-mnk"><i class="fa fa-address-book-o" aria-hidden="true"></i></label>
-      <input data-bağ="simge ufk" type="checkbox" id="simge-ufk" value="">
-      <label for="simge-ufk"><i class="fa fa-address-book-o" aria-hidden="true"></i></label>
-      <input data-bağ="simge" type="checkbox" id="simge" value="">
-      <label for="simge"><i class="fa fa-address-book-o" aria-hidden="true"></i></label>
-      <input data-bağ="simge ort" type="checkbox" id="simge-ort" value="">
-      <label for="simge-ort"><i class="fa fa-address-book-o" aria-hidden="true"></i></label>
-      <input data-bağ="simge byk" type="checkbox" id="simge-byk" value="">
-      <label for="simge-byk"><i class="fa fa-address-book-o" aria-hidden="true"></i></label>
-      <input data-bağ="simge dev" type="checkbox" id="simge-dev" value="">
-      <label for="simge-dev"><i class="fa fa-address-book-o" aria-hidden="true"></i></label>
-    </div>
-    <div data-deveb="göbekte" data-gnl="23">
-      <input data-bağ="simge çapraz mnk" type="checkbox" id="simge-mnk1" value="">
-      <label for="simge-mnk1"><i class="fa fa-address-book-o" aria-hidden="true"></i></i><i class="fa fa-plus" aria-hidden="true"></i></label>
-      <input data-bağ="simge çapraz ufk" type="checkbox" id="simge-ufk1" value="">
-      <label for="simge-ufk1"><i class="fa fa-address-book-o" aria-hidden="true"></i></i><i class="fa fa-plus" aria-hidden="true"></i></label>
-      <input data-bağ="simge çapraz" type="checkbox" id="simge1" value="">
-      <label for="simge1"><i class="fa fa-address-book-o" aria-hidden="true"></i></i><i class="fa fa-plus" aria-hidden="true"></i></label>
-      <input data-bağ="simge çapraz ort" type="checkbox" id="simge-ort1" value="">
-      <label for="simge-ort1"><i class="fa fa-address-book-o" aria-hidden="true"></i></i><i class="fa fa-plus" aria-hidden="true"></i></label>
-      <input data-bağ="simge çapraz byk" type="checkbox" id="simge-byk1" value="">
-      <label for="simge-byk1"><i class="fa fa-address-book-o" aria-hidden="true"></i></i><i class="fa fa-plus" aria-hidden="true"></i></label>
-      <input data-bağ="simge çapraz dev" type="checkbox" id="simge-dev1" value="">
-      <label for="simge-dev1"><i class="fa fa-address-book-o" aria-hidden="true"></i></i><i class="fa fa-plus" aria-hidden="true"></i></label>
-    </div>
-  </div>
-  <div data-gnl="1 1p" w3-include-html="/temel/foot.html"></div>
-  <script src="https://www.w3schools.com/lib/w3.js"></script>
-  <script>w3.includeHTML();</script>
-</body>
-</html>
+<div data-deveb="göbekte" data-gnl="23">
+  <h2>Basmal Bağlar</h2>
+  <h3>Hafif</h3>
+  <input data-bağ="hafif mnk" type="checkbox" id="hafif-mnk" value="">
+  <label for="hafif-mnk"></label>
+  <input data-bağ="hafif ufk" type="checkbox" id="hafif-ufk" value="">
+  <label for="hafif-ufk"></label>
+  <input data-bağ="hafif" type="checkbox" id="hafif" value="">
+  <label for="hafif"></label>
+  <input data-bağ="hafif ort" type="checkbox" id="hafif-ort" value="">
+  <label for="hafif-ort"></label>
+  <input data-bağ="hafif byk" type="checkbox" id="hafif-byk" value="">
+  <label for="hafif-byk"></label>
+  <input data-bağ="hafif dev" type="checkbox" id="hafif-dev" value="">
+  <label for="hafif-dev"></label>
+</div>
+<div data-deveb="göbekte" data-gnl="23">
+  <h3>Yumuşak</h3>
+  <input data-bağ="yumuşak mnk" type="checkbox" id="yumuşak-mnk" value="">
+  <label for="yumuşak-mnk"></label>
+  <input data-bağ="yumuşak ufk" type="checkbox" id="yumuşak-ufk" value="">
+  <label for="yumuşak-ufk"></label>
+  <input data-bağ="yumuşak" type="checkbox" id="yumuşak" value="">
+  <label for="yumuşak"></label>
+  <input data-bağ="yumuşak ort" type="checkbox" id="yumuşak-ort" value="">
+  <label for="yumuşak-ort"></label>
+  <input data-bağ="yumuşak byk" type="checkbox" id="yumuşak-byk" value="">
+  <label for="yumuşak-byk"></label>
+  <input data-bağ="yumuşak dev" type="checkbox" id="yumuşak-dev" value="">
+  <label for="yumuşak-dev"></label>
+</div>
+<div data-deveb="göbekte" data-gnl="23">
+  <h3>Yassı</h3>
+  <input data-bağ="yassı mnk" type="checkbox" id="yassı-mnk" value="">
+  <label for="yassı-mnk"></label>
+  <input data-bağ="yassı ufk" type="checkbox" id="yassı-ufk" value="">
+  <label for="yassı-ufk"></label>
+  <input data-bağ="yassı" type="checkbox" id="yassı" value="">
+  <label for="yassı"></label>
+  <input data-bağ="yassı ort" type="checkbox" id="yassı-ort" value="">
+  <label for="yassı-ort"></label>
+  <input data-bağ="yassı byk" type="checkbox" id="yassı-byk" value="">
+  <label for="yassı-byk"></label>
+  <input data-bağ="yassı dev" type="checkbox" id="yassı-dev" value="">
+  <label for="yassı-dev"></label>
+</div>
+<div data-deveb="göbekte" data-gnl="23">
+  <h3>Eğik</h3>
+  <input data-bağ="eğik mnk" type="checkbox" id="eğik-mnk" value="">
+  <label for="eğik-mnk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+  <input data-bağ="eğik ufk" type="checkbox" id="eğik-ufk" value="">
+  <label for="eğik-ufk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+  <input data-bağ="eğik" type="checkbox" id="eğik" value="">
+  <label for="eğik" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+  <input data-bağ="eğik ort" type="checkbox" id="eğik-ort" value="">
+  <label for="eğik-ort" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+  <input data-bağ="eğik byk" type="checkbox" id="eğik-byk" value="">
+  <label for="eğik-byk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+  <input data-bağ="eğik dev" type="checkbox" id="eğik-dev" value="">
+  <label for="eğik-dev" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+</div>
+<div data-deveb="göbekte" data-gnl="23">
+  <h3>Çevrik</h3>
+  <input data-bağ="çevrik mnk" type="checkbox" id="çevrik-mnk" value="">
+  <label for="çevrik-mnk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+  <input data-bağ="çevrik ufk" type="checkbox" id="çevrik-ufk" value="">
+  <label for="çevrik-ufk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+  <input data-bağ="çevrik" type="checkbox" id="çevrik" value="">
+  <label for="çevrik" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+  <input data-bağ="çevrik ort" type="checkbox" id="çevrik-ort" value="">
+  <label for="çevrik-ort" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+  <input data-bağ="çevrik byk" type="checkbox" id="çevrik-byk" value="">
+  <label for="çevrik-byk" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+  <input data-bağ="çevrik dev" type="checkbox" id="çevrik-dev" value="">
+  <label for="çevrik-dev" data-bağ-kapalı="KAPALI" data-bağ-açık="AÇIK"></label>
+</div>
+<div data-deveb="göbekte" data-gnl="23">
+  <h3>Simge</h3>
+  <input data-bağ="simge mnk" type="checkbox" id="simge-mnk" value="">
+  <label for="simge-mnk"><i class="fa fa-address-book-o" aria-hidden="true"></i></label>
+  <input data-bağ="simge ufk" type="checkbox" id="simge-ufk" value="">
+  <label for="simge-ufk"><i class="fa fa-address-book-o" aria-hidden="true"></i></label>
+  <input data-bağ="simge" type="checkbox" id="simge" value="">
+  <label for="simge"><i class="fa fa-address-book-o" aria-hidden="true"></i></label>
+  <input data-bağ="simge ort" type="checkbox" id="simge-ort" value="">
+  <label for="simge-ort"><i class="fa fa-address-book-o" aria-hidden="true"></i></label>
+  <input data-bağ="simge byk" type="checkbox" id="simge-byk" value="">
+  <label for="simge-byk"><i class="fa fa-address-book-o" aria-hidden="true"></i></label>
+  <input data-bağ="simge dev" type="checkbox" id="simge-dev" value="">
+  <label for="simge-dev"><i class="fa fa-address-book-o" aria-hidden="true"></i></label>
+</div>
+<div data-deveb="göbekte" data-gnl="23">
+  <input data-bağ="simge çapraz mnk" type="checkbox" id="simge-mnk1" value="">
+  <label for="simge-mnk1"><i class="fa fa-address-book-o" aria-hidden="true"></i></i><i class="fa fa-plus" aria-hidden="true"></i></label>
+  <input data-bağ="simge çapraz ufk" type="checkbox" id="simge-ufk1" value="">
+  <label for="simge-ufk1"><i class="fa fa-address-book-o" aria-hidden="true"></i></i><i class="fa fa-plus" aria-hidden="true"></i></label>
+  <input data-bağ="simge çapraz" type="checkbox" id="simge1" value="">
+  <label for="simge1"><i class="fa fa-address-book-o" aria-hidden="true"></i></i><i class="fa fa-plus" aria-hidden="true"></i></label>
+  <input data-bağ="simge çapraz ort" type="checkbox" id="simge-ort1" value="">
+  <label for="simge-ort1"><i class="fa fa-address-book-o" aria-hidden="true"></i></i><i class="fa fa-plus" aria-hidden="true"></i></label>
+  <input data-bağ="simge çapraz byk" type="checkbox" id="simge-byk1" value="">
+  <label for="simge-byk1"><i class="fa fa-address-book-o" aria-hidden="true"></i></i><i class="fa fa-plus" aria-hidden="true"></i></label>
+  <input data-bağ="simge çapraz dev" type="checkbox" id="simge-dev1" value="">
+  <label for="simge-dev1"><i class="fa fa-address-book-o" aria-hidden="true"></i></i><i class="fa fa-plus" aria-hidden="true"></i></label>
+</div>
