--- a/belgeler/belgeler.html
+++ b/belgeler/belgeler.html
@@ -1,51 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Deveb Önyüz İskeleti</title>
-
-  <!-- Kök -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;subset=latin-ext" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet">
-  <link rel="stylesheet" href="https://data-deveb.github.io/assets/css/font-awesome.min.css">
-  <link href="https://data-deveb.github.io/assets/css/deveb.css" rel="stylesheet"><link href="https://data-deveb.github.io/assets/css/deveb.ilkel.css" rel="stylesheet">
-  <link href="https://data-deveb.github.io/assets/css/ie/deveb.ilkel.ie.css" rel="stylesheet">
-  <link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
-
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-</head>
-<body>
-<div class="header" data-deveb="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
-<div class="ortada" data-deveb="24p" data-deveb="ort-24p">
-  <div data-deveb="kaplama" data-deveb="23" data-deveb="ort-16">
-    <div data-deveb="4 4p">
-      <div data-deveb="1">
-        <div class="kutu kutu-genel"><a href="#">Kap Örgüsü</a></div>
-      </div>
-      <div data-deveb="1">
-        <div class="kutu kutu-genel"><a href="#">Renk Örgüsü</a></div>
-      </div>
-      <div data-deveb="1">
-        <div class="kutu kutu-genel"><a href="#">Sekme Örgüsü</a></div>
-      </div>
-      <div data-deveb="1">
-        <div class="kutu kutu-genel"><a href="#">Resim Örgüsü</a></div>
-      </div>
-    </div>
+---
+layout: default
+---
+<div data-gnl="4 4p">
+  <div data-gnl="1">
+    <div class="kutu kutu-genel"><a href="#">Kap Örgüsü</a></div>
+  </div>
+  <div data-gnl="1">
+    <div class="kutu kutu-genel"><a href="#">Renk Örgüsü</a></div>
+  </div>
+  <div data-gnl="1">
+    <div class="kutu kutu-genel"><a href="#">Sekme Örgüsü</a></div>
+  </div>
+  <div data-gnl="1">
+    <div class="kutu kutu-genel"><a href="#">Resim Örgüsü</a></div>
   </div>
 </div>
-
-<div data-deveb="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
-<script src="https://data-deveb.github.io/assets/js/not-for-deveb-w3.js"></script>
-<script>w3.includeHTML();</script>
-</body>
-</html>
