--- a/belgeler/hata.html
+++ b/belgeler/hata.html
@@ -1,4 +1,6 @@
-<?php include '../toprak/head.html';?>
+---
+layout: default
+---
 <div class="ortala" gnl="3 kolon 2p">
 
   <div gnl="1">1/2p #1</div>
@@ -26,4 +28,3 @@
   <div gnl="1">1/2p #23</div>
   <div gnl="1">1/2p #24</div>
 </div>
-<?php include '../toprak/foot.html';?>
