--- a/belgeler/kap-olcekleri/2p.html
+++ b/belgeler/kap-olcekleri/2p.html
@@ -1,69 +1,34 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Deveb Önyüz İskeleti</title>
-
-  <!-- Kök -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;subset=latin-ext" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet">
-  <link rel="stylesheet" href="https://data-deveb.github.io/assets/css/font-awesome.min.css">
-  <link href="https://data-deveb.github.io/assets/css/deveb.css" rel="stylesheet"><link href="https://data-deveb.github.io/assets/css/deveb.ilkel.css" rel="stylesheet">
-  <link href="https://data-deveb.github.io/assets/css/ie/deveb.ilkel.ie.css" rel="stylesheet">
-  <link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
-
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-</head>
-<body>
-<div class="header" data-deveb="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
-
-<div class="kap ortala" data-deveb="24p">
-  <div data-deveb="23 24p">
-    <div data-deveb="24">
-      <h1>Kap Ölçekleri: 2p</h1>
-      <p class="beri-alt-2">Uyumluluk özelliği nedeniyle gnl, byk, ort, kçk, ufk ekran ölçekleriyle birlikte kullanılır.</p>
-    </div>
-
-    <div data-deveb="2 2p">
-
-      <div class="kutu kutu-genel">data-deveb="2 2p"</div>
-
-      <div data-deveb="2"><div class="kutu kutu-genel">data-deveb="2 2p" > data-deveb="2"</div></div>
-
-      <div data-deveb="1"><div class="kutu kutu-genel">data-deveb="2 2p" > data-deveb="1"</div></div>
-      <div data-deveb="1"><div class="kutu kutu-genel">data-deveb="2 2p" > data-deveb="1"</div></div>
-
-      <div data-deveb="1 3p"><div class="kutu kutu-genel">data-deveb="2 2p" > data-deveb="1 3p"</div></div>
-      <div data-deveb="1 3p"><div class="kutu kutu-genel">data-deveb="2 2p" > data-deveb="1 3p"</div></div>
-      <div data-deveb="1 3p"><div class="kutu kutu-genel">data-deveb="2 2p" > data-deveb="1 3p"</div></div>
-      <div data-deveb="6 6p"><div class="kutu kutu-genel">data-deveb="2 2p" > data-deveb="6 6p"</div></div>
-      <div data-deveb="2 6p"><div class="kutu kutu-genel">data-deveb="2 2p" > data-deveb="2 6p"</div></div>
-      <div data-deveb="2 6p">
-        <div class="kutu kutu-genel">data-deveb="2 2p" > data-deveb="2 6p"</div>
-        <div data-deveb="3"><div class="kutu kutu-genel">data-deveb="2 2p" > data-deveb="2 6p" > data-deveb="3"</div></div>
-        <div data-deveb="3"><div class="kutu kutu-genel">data-deveb="2 2p" > data-deveb="2 6p" > data-deveb="3"</div></div>
-      </div>
-      <div data-deveb="2 6p">
-        <div class="kutu kutu-genel">data-deveb="2 2p" > data-deveb="2 6p"</div>
-        <div data-deveb="2"><div class="kutu kutu-genel">data-deveb="2 2p" > data-deveb="2 6p" > data-deveb="2"</div></div>
-        <div data-deveb="2"><div class="kutu kutu-genel">data-deveb="2 2p" > data-deveb="2 6p" > data-deveb="2"</div></div>
-        <div data-deveb="2"><div class="kutu kutu-genel">data-deveb="2 2p" > data-deveb="2 6p" > data-deveb="2"</div></div>
-      </div>
-    </div>
-  </div>
+---
+layout: default
+---
+<div data-gnl="24">
+  <h1>Kap Ölçekleri: 2p</h1>
+  <p class="beri-alt-2">Uyumluluk özelliği nedeniyle gnl, byk, ort, kçk, ufk ekran ölçekleriyle birlikte kullanılır.</p>
 </div>
 
-<div data-deveb="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
-<script src="https://www.w3schools.com/lib/w3.js"></script>
-<script>w3.includeHTML();</script>
-</body>
-</html>
+<div data-gnl="2 2p">
+
+  <div class="kutu kutu-genel">data-gnl="2 2p"</div>
+
+  <div data-gnl="2"><div class="kutu kutu-genel">data-gnl="2 2p" > data-gnl="2"</div></div>
+
+  <div data-gnl="1"><div class="kutu kutu-genel">data-gnl="2 2p" > data-gnl="1"</div></div>
+  <div data-gnl="1"><div class="kutu kutu-genel">data-gnl="2 2p" > data-gnl="1"</div></div>
+
+  <div data-gnl="1 3p"><div class="kutu kutu-genel">data-gnl="2 2p" > data-gnl="1 3p"</div></div>
+  <div data-gnl="1 3p"><div class="kutu kutu-genel">data-gnl="2 2p" > data-gnl="1 3p"</div></div>
+  <div data-gnl="1 3p"><div class="kutu kutu-genel">data-gnl="2 2p" > data-gnl="1 3p"</div></div>
+  <div data-gnl="6 6p"><div class="kutu kutu-genel">data-gnl="2 2p" > data-gnl="6 6p"</div></div>
+  <div data-gnl="2 6p"><div class="kutu kutu-genel">data-gnl="2 2p" > data-gnl="2 6p"</div></div>
+  <div data-gnl="2 6p">
+    <div class="kutu kutu-genel">data-gnl="2 2p" > data-gnl="2 6p"</div>
+    <div data-gnl="3"><div class="kutu kutu-genel">data-gnl="2 2p" > data-gnl="2 6p" > data-gnl="3"</div></div>
+    <div data-gnl="3"><div class="kutu kutu-genel">data-gnl="2 2p" > data-gnl="2 6p" > data-gnl="3"</div></div>
+  </div>
+  <div data-gnl="2 6p">
+    <div class="kutu kutu-genel">data-gnl="2 2p" > data-gnl="2 6p"</div>
+    <div data-gnl="2"><div class="kutu kutu-genel">data-gnl="2 2p" > data-gnl="2 6p" > data-gnl="2"</div></div>
+    <div data-gnl="2"><div class="kutu kutu-genel">data-gnl="2 2p" > data-gnl="2 6p" > data-gnl="2"</div></div>
+    <div data-gnl="2"><div class="kutu kutu-genel">data-gnl="2 2p" > data-gnl="2 6p" > data-gnl="2"</div></div>
+  </div>
+</div>
