--- a/belgeler/kap-orgusu/ornekler.html
+++ b/belgeler/kap-orgusu/ornekler.html
@@ -1,5 +1,6 @@
-<?php include '../../toprak/head.html';?>
-<?php include '../../toprak/header.html';?>
+---
+layout: default
+---
 
 <div class="kap-merkez">
   <div class="kap_gnl-11-12p">
@@ -56,4 +57,3 @@
     </div>
   </div>
 </div>
-<?php include '../../toprak/foot.html';?>
