--- a/belgeler/menuler.html
+++ b/belgeler/menuler.html
@@ -1,7 +1,6 @@
-<?php include '../toprak/head.html';?>
-<?php include '../toprak/header.html';?>
-<div class="ortala" gnl="24p">
-  <div class="" gnl="23">
+---
+layout: default
+---
     <h1>Menüler</h1>
     <ul>
       <li>Seviye 1.1</li>
@@ -82,11 +81,3 @@
       <li><a href="#">Contact Us</a></li>
     </ul>
     </nav>
-
-
-
-  </div>
-</div>
-
-
-<?php include '../toprak/foot.html';?>
