--- a/belgeler/terimler.html
+++ b/belgeler/terimler.html
@@ -1,79 +1,46 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Deveb - Terimler</title>
+---
+layout: default
+---
 
-  <!-- Kök -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;subset=latin-ext" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet">
-  <link rel="stylesheet" href="https://data-deveb.github.io/assets/css/font-awesome.min.css">
-  <link href="https://data-deveb.github.io/assets/css/deveb.css" rel="stylesheet"><link href="https://data-deveb.github.io/assets/css/deveb.ilkel.css" rel="stylesheet">
-  <link href="https://data-deveb.github.io/assets/css/ie/deveb.ilkel.ie.s1.css" rel="stylesheet">
-  <link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
-  <link href="../assets/css/deveb.ilkel.css" rel="stylesheet">
+<h1>Terimler</h1>
+<p><span data-metin="dikkat">data-gnl</span>: Telefon ekranları ve daha büyük ekranlar için kap örgüsü genişliği tanımlar.</p>
 
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-</head>
-<body>
-  <div data-gnl="1 1p" class="header" w3-include-html="/temel/header.html"></div>
-  <div data-deveb="kaplama ortada" data-gnl="23 24p" data-ort="23 24p">
+<p><span data-metin="dikkat">data-ufk</span>: Tablet ekranları ve daha büyük ekranlar için kap örgüsü genişliği tanımlar</p>
 
-      <h1>Terimler</h1>
-      <p><span data-metin="dikkat">data-gnl</span>: Telefon ekranları ve daha büyük ekranlar için kap örgüsü genişliği tanımlar.</p>
+<p><span data-metin="dikkat">data-ort</span>: Dizüstü ekranları ve daha büyük ekranlar için kap örgüsü genişliği tanımlar</p>
 
-      <p><span data-metin="dikkat">data-ufk</span>: Tablet ekranları ve daha büyük ekranlar için kap örgüsü genişliği tanımlar</p>
+<p><span data-metin="dikkat">data-byk</span>: Masaüstü ekranları ve daha büyük ekranlar için kap örgüsü genişliği tanımlar</p>
 
-      <p><span data-metin="dikkat">data-ort</span>: Dizüstü ekranları ve daha büyük ekranlar için kap örgüsü genişliği tanımlar</p>
+<p><span data-metin="dikkat">data-gnl="SAYI SAYIp"</span>: Telefon ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır. SAYIp değeri kap örgüsünün hangi düzende kullanılacağını tanımlar.</p>
 
-      <p><span data-metin="dikkat">data-byk</span>: Masaüstü ekranları ve daha büyük ekranlar için kap örgüsü genişliği tanımlar</p>
+<p><span data-metin="dikkat">data-ufk="SAYI SAYIp"</span>: Tablet ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır. SAYIp değeri kap örgüsünün hangi düzende kullanılacağını tanımlar.</p>
 
-      <p><span data-metin="dikkat">data-gnl="SAYI SAYIp"</span>: Telefon ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır. SAYIp değeri kap örgüsünün hangi düzende kullanılacağını tanımlar.</p>
+<p><span data-metin="dikkat">data-ort="SAYI SAYIp"</span>: Dizüstü ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır. SAYIp değeri kap örgüsünün hangi düzende kullanılacağını tanımlar.</p>
 
-      <p><span data-metin="dikkat">data-ufk="SAYI SAYIp"</span>: Tablet ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır. SAYIp değeri kap örgüsünün hangi düzende kullanılacağını tanımlar.</p>
+<p><span data-metin="dikkat">data-byk="SAYI SAYIp"</span>: Masaüstü ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır. SAYIp değeri kap örgüsünün hangi düzende kullanılacağını tanımlar.</p>
 
-      <p><span data-metin="dikkat">data-ort="SAYI SAYIp"</span>: Dizüstü ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır. SAYIp değeri kap örgüsünün hangi düzende kullanılacağını tanımlar.</p>
+<p><span data-metin="dikkat">data-gnl="SAYI"</span>: Telefon ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır. SAYIp tanımlanmadığı için kendisine en yakın ana html etiketlerinde tanımlanmış SAYIp değeri ile etkileşimdedir.</p>
 
-      <p><span data-metin="dikkat">data-byk="SAYI SAYIp"</span>: Masaüstü ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır. SAYIp değeri kap örgüsünün hangi düzende kullanılacağını tanımlar.</p>
+<p><span data-metin="dikkat">data-ufk="SAYI"</span>: Tablet ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır. SAYIp tanımlanmadığı için kendisine en yakın ana html etiketlerinde tanımlanmış SAYIp değeri ile etkileşimdedir.</p>
 
-      <p><span data-metin="dikkat">data-gnl="SAYI"</span>: Telefon ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır. SAYIp tanımlanmadığı için kendisine en yakın ana html etiketlerinde tanımlanmış SAYIp değeri ile etkileşimdedir.</p>
+<p><span data-metin="dikkat">data-ort="SAYI"</span>: Dizüstü ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır. SAYIp tanımlanmadığı için kendisine en yakın ana html etiketlerinde tanımlanmış SAYIp değeri ile etkileşimdedir.</p>
 
-      <p><span data-metin="dikkat">data-ufk="SAYI"</span>: Tablet ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır. SAYIp tanımlanmadığı için kendisine en yakın ana html etiketlerinde tanımlanmış SAYIp değeri ile etkileşimdedir.</p>
+<p><span data-metin="dikkat">data-byk="SAYI"</span>: Masaüstü ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır. SAYIp tanımlanmadığı için kendisine en yakın ana html etiketlerinde tanımlanmış SAYIp değeri ile etkileşimdedir.</p>
 
-      <p><span data-metin="dikkat">data-ort="SAYI"</span>: Dizüstü ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır. SAYIp tanımlanmadığı için kendisine en yakın ana html etiketlerinde tanımlanmış SAYIp değeri ile etkileşimdedir.</p>
+<p><span data-metin="dikkat">data-gnl="SAYIp"</span>: Telefon ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre sadece kap örgüsünün hangi parça düzeninde olacağını tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır.</p>
 
-      <p><span data-metin="dikkat">data-byk="SAYI"</span>: Masaüstü ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır. SAYIp tanımlanmadığı için kendisine en yakın ana html etiketlerinde tanımlanmış SAYIp değeri ile etkileşimdedir.</p>
+<p><span data-metin="dikkat">data-ufk="SAYIp"</span>: Tablet ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre sadece kap örgüsünün hangi parça düzeninde olacağını tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır.</p>
 
-      <p><span data-metin="dikkat">data-gnl="SAYIp"</span>: Telefon ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre sadece kap örgüsünün hangi parça düzeninde olacağını tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır.</p>
+<p><span data-metin="dikkat">data-ort="SAYIp"</span>: Masaüstü ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre sadece kap örgüsünün hangi parça düzeninde olacağını tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır.</p>
 
-      <p><span data-metin="dikkat">data-ufk="SAYIp"</span>: Tablet ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre sadece kap örgüsünün hangi parça düzeninde olacağını tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır.</p>
+<p><span data-metin="dikkat">data-byk="SAYIp"</span>: Masaüstü ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre sadece kap örgüsünün hangi parça düzeninde olacağını tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır.</p>
 
-      <p><span data-metin="dikkat">data-ort="SAYIp"</span>: Masaüstü ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre sadece kap örgüsünün hangi parça düzeninde olacağını tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır.</p>
+<p><span data-metin="dikkat">data-gnl="tam-kaplama"</span>: Tüm ekran genişliklerinde bulunduğu genişliğin tamamını katı bir şekilde kaplar.</p>
 
-      <p><span data-metin="dikkat">data-byk="SAYIp"</span>: Masaüstü ekranları ve daha büyük ekranlar için kap örgüsü genişliğini belirtilen SAYI SAYIp düzenine göre sadece kap örgüsünün hangi parça düzeninde olacağını tanımlar. SAYI kelimesi görülen yere 1~24 değerlerini girerek kullanılır.</p>
+<p><span data-metin="dikkat">data-ufk="tam-kaplama"</span>: Tablet ekranları ve daha büyük ekran genişliklerinde bulunduğu genişliğin tamamını katı bir şekilde kaplar.</p>
 
-      <p><span data-metin="dikkat">data-gnl="tam-kaplama"</span>: Tüm ekran genişliklerinde bulunduğu genişliğin tamamını katı bir şekilde kaplar.</p>
+<p><span data-metin="dikkat">data-ort="tam-kaplama"</span>: Dizüstü ekranları ve daha büyük ekran genişliklerinde bulunduğu genişliğin tamamını katı bir şekilde kaplar.</p>
 
-      <p><span data-metin="dikkat">data-ufk="tam-kaplama"</span>: Tablet ekranları ve daha büyük ekran genişliklerinde bulunduğu genişliğin tamamını katı bir şekilde kaplar.</p>
+<p><span data-metin="dikkat">data-byk="tam-kaplama"</span>: Masaüstü ekranları ve daha büyük ekran genişliklerinde bulunduğu genişliğin tamamını katı bir şekilde kaplar.</p>
 
-      <p><span data-metin="dikkat">data-ort="tam-kaplama"</span>: Dizüstü ekranları ve daha büyük ekran genişliklerinde bulunduğu genişliğin tamamını katı bir şekilde kaplar.</p>
-
-      <p><span data-metin="dikkat">data-byk="tam-kaplama"</span>: Masaüstü ekranları ve daha büyük ekran genişliklerinde bulunduğu genişliğin tamamını katı bir şekilde kaplar.</p>
-
-      <p><span data-metin="dikkat">data-deveb="kaplama"</span>: Dizüstü ve daha geniş ekranlarda sabit kap örgüsü genişliği tanımlar</p>
-
-
-  </div>
-  <div data-gnl="1 1p" w3-include-html="/temel/foot.html"></div>
-  <script src="https://www.w3schools.com/lib/w3.js"></script>
-  <script>w3.includeHTML();</script>
-</body>
-</html>
+<p><span data-metin="dikkat">data-deveb="kaplama"</span>: Dizüstü ve daha geniş ekranlarda sabit kap örgüsü genişliği tanımlar</p>
