Ölçek hatası düzeltildi.

--- a/belgeler/renk-orgusu.html
+++ b/belgeler/renk-orgusu.html
@@ -4,12 +4,12 @@ layout: default
 <h1>Renk Örgüsü</h1>
 <p>Renk örgüsü varsayılan olarak tanımlanmış bazı renk etiketleriyle kullanılmaktadır. "ana", "ara", "birincil", "ikincil" etiketleri kullanıcılar tarafından özelleştirilebilir renk grubudur. Bunların yanında özelleştirilebilen "dikkat", "tehlike", "bilgi", "olumlu", "olumsuz" renk etiketleri de kullanıcılar tarafından özelleştirilebilmektedir. Aşağıda renk örgüsünü kullanmak yönünde açıklamaları okuyunuz.</p>
 <h2>Tanımlamalar</h2>
-<div data-gnl="24" data-ufk="8" style="font-size:13px;">
+<div data-gnl="24" data-ufk="8 24p" style="font-size:13px;">
   <p><b>Renklendirme Alanları:</b><br> metin - data-arka - kenar<br>
   Belirtilen 3 alana renklendirmeler yapabilirsiniz.<br><br>
   <b>Kullanım tipi:</b><br>( data-deveb="metin- " data-arka=" " data-kenar=" " )<br> ( class="metin- data-arka- kenar-" )<br><br></p>
 </div>
-<div data-gnl="24" data-ufk="8" style="font-size:13px;">
+<div data-gnl="24" data-ufk="8 24p" style="font-size:13px;">
   <p><b>Renk Grubu:</b><br>
     <span data-arka="ana" style="display:inline-block; height:10px; width:10px; border-radius:50%; border-width:0; margin-right:3px;"></span>ana -
     <span data-arka="ara" style="display:inline-block; height:10px; width:10px; border-radius:50%; border-width:0;margin-right:3px;"></span>ara -
@@ -28,7 +28,7 @@ layout: default
     <span data-arka="beyaz" style="display:inline-block; height:10px; width:10px; border-radius:50%; border-width:1px; border-style:solid;margin-right:3px;"></span>beyaz<br>
   <b>Kullanım tipi:</b><br>data-deveb="metin-birincil" data-arka="ikincil" data-kenar="tam siyah"<br><br><br></p>
 </div>
-<div data-gnl="24" data-ufk="8" style="font-size:13px;">
+<div data-gnl="24" data-ufk="8 24p" style="font-size:13px;">
   <p><b>Renk Tonları:</b><br>100 - 200 - 300 - 400 - 500 - 600 - 700 - 800 - 900<br>
     <b>Renk Aydınlığı:</b><br>en-soluk -  çok-soluk - soluk - az-soluk - normal - az-parlak - parlak - çok-parlak - en-parlak<br>
   <b>Kullanım tipi:</b><br>data-deveb="metin-birincil 300 soluk" data-arka="ikincil 600 parlak" data-kenar="tam siyah 800"</p>
