Başlık bilgileri eklendi.

--- a/belgeler/resim-orgusu.html
+++ b/belgeler/resim-orgusu.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Resim Örgüsü
 ---
   <div class="dolgu-1" data-deveb="8"><img data-resim="daire" src="http://placehold.it/100x100"></div>
   <div class="dolgu-1" data-deveb="8"><img data-resim="kare" src="http://placehold.it/100x100"></div>
