--- a/belgeler/takim.html
+++ b/belgeler/takim.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Takım
 ---
 <h1>Takımlar</h1>
 <p>Her takımın kendine ait bir görevi vardır. Bu takımlara istenildiği zaman katılabilir ve ayrılabilirsiniz. Takımlar bir işi çözmek için anlık olarak iş süreçleri oluştururlar. Sadık kalınan bir iş gidişatları yoktur.</p>
