--- a/belgeler/tarayici-destegi.html
+++ b/belgeler/tarayici-destegi.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Tarayıcı Desteği
 ---
 <h1>Tarayıcı Desteği</h1>
 <p>Deveb önyüz iskeletini destekleyen tarayıcılar</p>
