--- a/belgeler/renk-orgusu.html
+++ b/belgeler/renk-orgusu.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Renk Örgüsü
 ---
 <h1>Renk Örgüsü</h1>
 <p>Renk örgüsü varsayılan olarak tanımlanmış bazı renk etiketleriyle kullanılmaktadır. "ana", "ara", "birincil", "ikincil" etiketleri kullanıcılar tarafından özelleştirilebilir renk grubudur. Bunların yanında özelleştirilebilen "dikkat", "tehlike", "bilgi", "olumlu", "olumsuz" renk etiketleri de kullanıcılar tarafından özelleştirilebilmektedir. Aşağıda renk örgüsünü kullanmak yönünde açıklamaları okuyunuz.</p>
