--- a/belgeler/kap-orgusu/ornekler.html
+++ b/belgeler/kap-orgusu/ornekler.html
@@ -3,7 +3,11 @@ layout: default
 title: Örnekler
 ---
 
-<div class="kap-merkez">
+<h1>Deveb Kap Örnekleri</h1>
+<p>Deveb kap örgüsü ile düzenleri nasıl oluşturduğumuzu inceleyin.</p>
+
+
+<!--<div class="kap-merkez">
   <div class="kap_gnl-11-12p">
     <div class="kap_gnl-3b_ort-1b arala-1 dışkenar-0">
       <div class="kap_gnl-5-5p">
@@ -57,4 +61,4 @@ title: Örnekler
       </div>
     </div>
   </div>
-</div>
+</div>-->
