Kap örgüsü ölçekleri düzeltildi.

--- a/belgeler/takim.html
+++ b/belgeler/takim.html
@@ -5,43 +5,43 @@ title: Takım
 <h1>Takımlar</h1>
 <p>Her takımın kendine ait bir görevi vardır. Bu takımlara istenildiği zaman katılabilir ve ayrılabilirsiniz. Takımlar bir işi çözmek için anlık olarak iş süreçleri oluştururlar. Sadık kalınan bir iş gidişatları yoktur.</p>
 
-<div class="arala-1 dışkenar-0 metin-orta" data-deveb="1 1p ufk-2 ufk-2p ort-3 ort-3p">
-  <div data-deveb="1 ufk-1 ort-1">
+<div class="arala-1 dışkenar-0 metin-orta" data-gnl="1 1p" data-ufk="2 2p" data-ort="3 3p">
+  <div data-gnl="1" data-ufk="1" data-ort="1">
     <p>
       <i class="fa fa-microchip beri-2" style="font-size:60pt;"></i> <br>
       <span class="metin-olumlu">Örgü Takımı</span> <br>
       Deveb iskeletini geliştirmek üzere bir araya gelerek tüm grupları etkileyen işler yaparlar
     </p>
   </div>
-  <div data-deveb="1 ufk-1 ort-1">
+  <div data-gnl="1" data-ufk="1" data-ort="1">
     <p>
       <i class="fa fa-briefcase beri-2" style="font-size:60pt;"></i> <br>
       <span class="metin-olumlu">Örnek Takımı</span> <br>
       Deveb kullanarak yapılabilecek her şeye basit bir örnek çıkarmak için bir araya gelirler
     </p>
   </div>
-  <div data-deveb="1 ufk-1 ort-1">
+  <div data-gnl="1" data-ufk="1" data-ort="1">
     <p>
       <i class="fa fa-star beri-2" style="font-size:60pt;"></i> <br>
       <span class="metin-olumlu">Başarım Takımı</span> <br>
       Deveb kullanımı sırasında yolunda gitmeyen şeyleri çözmek için bir araya gelirler
     </p>
   </div>
-  <div data-deveb="1 ufk-1 ort-1">
+  <div data-gnl="1" data-ufk="1" data-ort="1">
     <p>
       <i class="fa fa-microchip beri-2" style="font-size:60pt;"></i> <br>
       <span class="metin-olumlu">Görüş Takımı</span> <br>
       Deveb hakkında izlenimlerini, fikirlerini, beklentilerinidata-ortaya koymak için bir araya gelirler
     </p>
   </div>
-  <div data-deveb="1 ufk-1 ort-1">
+  <div data-gnl="1" data-ufk="1" data-ort="1">
     <p>
       <i class="fa fa-briefcase beri-2" style="font-size:60pt;"></i> <br>
       <span class="metin-olumlu">Belge Takımı</span> <br>
       Deveb hakkında gerek duyulacak her türlü belgeyi oluşturmak için bir araya gelirler
     </p>
   </div>
-  <div data-deveb="1 ufk-1 ort-1">
+  <div data-gnl="1" data-ufk="1" data-ort="1">
     <p>
       <i class="fa fa-star beri-2" style="font-size:60pt;"></i> <br>
       <span class="metin-olumlu">Yardım Takımı</span> <br>
