--- a/belgeler/takim.html
+++ b/belgeler/takim.html
@@ -7,45 +7,45 @@ title: Takım
 
 <div class="arala-1 dışkenar-0 metin-orta" data-gnl="1 1p" data-kçk="2 2p" data-ort="3 3p">
   <div data-gnl="1" data-kçk="1" data-ort="1">
-    <p>
-      <i class="fa fa-microchip beri-2" style="font-size:60pt;"></i> <br>
-      <span class="metin-olumlu">Örgü Takımı</span> <br>
+    <div>
+      <i class="fa fa-flask beri-2" style="font-size:60pt;"></i> <br>
+      <h2 data-metin="olumlu">GELİŞTİRİCİLER</h2> <br>
       Deveb iskeletini geliştirmek üzere bir araya gelerek tüm grupları etkileyen işler yaparlar
-    </p>
+    </div>
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
-    <p>
+    <div>
       <i class="fa fa-briefcase beri-2" style="font-size:60pt;"></i> <br>
-      <span class="metin-olumlu">Örnek Takımı</span> <br>
+      <h2 data-metin="olumlu">Örnek Takımı</span> <br>
       Deveb kullanarak yapılabilecek her şeye basit bir örnek çıkarmak için bir araya gelirler
-    </p>
+    </div>
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
-    <p>
+    <div>
       <i class="fa fa-star beri-2" style="font-size:60pt;"></i> <br>
-      <span class="metin-olumlu">Başarım Takımı</span> <br>
+      <h2 data-metin="olumlu">Başarım Takımı</span> <br>
       Deveb kullanımı sırasında yolunda gitmeyen şeyleri çözmek için bir araya gelirler
-    </p>
+    </div>
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
-    <p>
+    <div>
       <i class="fa fa-microchip beri-2" style="font-size:60pt;"></i> <br>
-      <span class="metin-olumlu">Görüş Takımı</span> <br>
+      <h2 data-metin="olumlu">Görüş Takımı</span> <br>
       Deveb hakkında izlenimlerini, fikirlerini, beklentilerinidata-ortaya koymak için bir araya gelirler
-    </p>
+    </div>
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
-    <p>
+    <div>
       <i class="fa fa-briefcase beri-2" style="font-size:60pt;"></i> <br>
-      <span class="metin-olumlu">Belge Takımı</span> <br>
+      <h2 data-metin="olumlu">Belge Takımı</span> <br>
       Deveb hakkında gerek duyulacak her türlü belgeyi oluşturmak için bir araya gelirler
-    </p>
+    </div>
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
-    <p>
+    <div>
       <i class="fa fa-star beri-2" style="font-size:60pt;"></i> <br>
-      <span class="metin-olumlu">Yardım Takımı</span> <br>
+      <h2 data-metin="olumlu">Yardım Takımı</span> <br>
       Deveb kullanımı konusunda yardıma ihtiyaç duyulan herhangi bir noktada çözüm için bir araya gelirler
-    </p>
+    </div>
   </div>
 </div>
