--- a/belgeler/takim.html
+++ b/belgeler/takim.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Takım
+title: Deveb'in İnsanları
 ---
 <h1>Takımlar</h1>
 <p>Her takımın kendine ait bir görevi vardır. Bu takımlara istenildiği zaman katılabilir ve ayrılabilirsiniz. Takımlar bir işi çözmek için anlık olarak iş süreçleri oluştururlar. Sadık kalınan bir iş gidişatları yoktur.</p>
@@ -10,28 +10,28 @@ title: Takım
     <div>
       <i class="fa fa-flask beri-2" style="font-size:60pt;"></i> <br>
       <h2 data-metin="olumlu">GELİŞTİRİCİLER</h2> <br>
-      Deveb iskeletini geliştirmek üzere bir araya gelerek tüm grupları etkileyen işler yaparlar
+      Deveb'i' geliştirmek üzere bir araya gelerek her şeyi etkileyen işleri yaparlar.
     </div>
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
     <div>
       <i class="fa fa-briefcase beri-2" style="font-size:60pt;"></i> <br>
-      <h2 data-metin="olumlu">Örnek Takımı</span> <br>
-      Deveb kullanarak yapılabilecek her şeye basit bir örnek çıkarmak için bir araya gelirler
+      <h2 data-metin="olumlu">EĞİTİMCİLER</span> <br>
+      Deveb'i daha iyi kullanabilmek amacıyla örnekler, eğitimler ve diğer şeyleri hazırlarlar.
     </div>
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
     <div>
       <i class="fa fa-star beri-2" style="font-size:60pt;"></i> <br>
-      <h2 data-metin="olumlu">Başarım Takımı</span> <br>
-      Deveb kullanımı sırasında yolunda gitmeyen şeyleri çözmek için bir araya gelirler
+      <h2 data-metin="olumlu">DENETLEYİCİLER</span> <br>
+      Deveb ile her şeyin gerçekten sorunsuz olup olmadığını denetleyerek hataların olup olmadığı keşfini yaparlar.
     </div>
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
     <div>
-      <i class="fa fa-microchip beri-2" style="font-size:60pt;"></i> <br>
-      <h2 data-metin="olumlu">Görüş Takımı</span> <br>
-      Deveb hakkında izlenimlerini, fikirlerini, beklentilerinidata-ortaya koymak için bir araya gelirler
+      <i class="fa fa-handshake-o beri-2" style="font-size:60pt;"></i> <br>
+      <h2 data-metin="olumlu">DESTEKÇİLER</span> <br>
+      Deveb'i hemen kullanmaya başlayarak geri bildirim yapıp en iyi sürümün çıkmasına katkıda bulunurlar.
     </div>
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
