--- a/belgeler/takim.html
+++ b/belgeler/takim.html
@@ -16,35 +16,35 @@ title: Deveb'in İnsanları
   <div data-gnl="1" data-kçk="1" data-ort="1">
     <div>
       <i class="fa fa-briefcase beri-2" style="font-size:60pt;"></i> <br>
-      <h2 data-metin="olumlu">EĞİTİMCİLER</span> <br>
+      <h2 data-metin="olumlu">EĞİTİMCİLER</h2> <br>
       Deveb'i daha iyi kullanabilmek amacıyla örnekler, eğitimler ve diğer şeyleri hazırlarlar.
     </div>
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
     <div>
       <i class="fa fa-star beri-2" style="font-size:60pt;"></i> <br>
-      <h2 data-metin="olumlu">DENETLEYİCİLER</span> <br>
+      <h2 data-metin="olumlu">DENETLEYİCİLER</h2> <br>
       Deveb ile her şeyin gerçekten sorunsuz olup olmadığını denetleyerek hataların olup olmadığı keşfini yaparlar.
     </div>
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
     <div>
       <i class="fa fa-handshake-o beri-2" style="font-size:60pt;"></i> <br>
-      <h2 data-metin="olumlu">DESTEKÇİLER</span> <br>
+      <h2 data-metin="olumlu">DESTEKÇİLER</h2> <br>
       Deveb'i hemen kullanmaya başlayarak geri bildirim yapıp en iyi sürümün çıkmasına katkıda bulunurlar.
     </div>
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
     <div>
       <i class="fa fa-briefcase beri-2" style="font-size:60pt;"></i> <br>
-      <h2 data-metin="olumlu">Belge Takımı</span> <br>
+      <h2 data-metin="olumlu">Belge Takımı</h2> <br>
       Deveb hakkında gerek duyulacak her türlü belgeyi oluşturmak için bir araya gelirler
     </div>
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
     <div>
       <i class="fa fa-star beri-2" style="font-size:60pt;"></i> <br>
-      <h2 data-metin="olumlu">Yardım Takımı</span> <br>
+      <h2 data-metin="olumlu">Yardım Takımı</h2> <br>
       Deveb kullanımı konusunda yardıma ihtiyaç duyulan herhangi bir noktada çözüm için bir araya gelirler
     </div>
   </div>
