--- a/belgeler/takim.html
+++ b/belgeler/takim.html
@@ -2,8 +2,8 @@
 layout: default
 title: Deveb'in İnsanları
 ---
-<h1>Takımlar</h1>
-<p>Her takımın kendine ait bir görevi vardır. Bu takımlara istenildiği zaman katılabilir ve ayrılabilirsiniz. Takımlar bir işi çözmek için anlık olarak iş süreçleri oluştururlar. Sadık kalınan bir iş gidişatları yoktur.</p>
+<h1>Deveb'in İnsanları</h1>
+<p>Her kişinin Deveb için katkıda bulunduğu alanlar var. Gönüllülük esasına dayalı Deveb İnsanları zaman zaman gözden kaybolabilme özelliklerine sahiptir. Kendilerini unutturmayı başardıkları anda bir anda ortaya çıkarak sizi şaşırtabilirler.</p>
 
 <div class="arala-1 dışkenar-0 metin-orta" data-gnl="1 1p" data-kçk="2 2p" data-ort="3 3p">
   <div data-gnl="1" data-kçk="1" data-ort="1">
