--- a/belgeler/takim.html
+++ b/belgeler/takim.html
@@ -43,7 +43,7 @@ title: Deveb'in İnsanları
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
     <div>
-      <i class="fa fa-star beri-2" style="font-size:60pt;"></i> <br>
+      <i class="fa fa-group beri-2" style="font-size:60pt;"></i> <br>
       <h2 data-metin="olumlu">TAKİPÇİLER</h2> <br>
       Deveb gelişmelerini yakından takip ederek haberdar olmak isterler. Gelecekte deveb'i kullanacaklarına inanıyoruz.
     </div>
