--- a/belgeler/takim.html
+++ b/belgeler/takim.html
@@ -31,7 +31,7 @@ title: Deveb'in İnsanları
     <div>
       <i class="fa fa-handshake-o beri-2" style="font-size:60pt;"></i> <br>
       <h2 data-metin="olumlu">DESTEKÇİLER</h2> <br>
-      Deveb'i hemen kullanmaya başlayarak geri bildirim yapıp en iyi sürümün çıkmasına katkıda bulunurlar.
+      Deveb'e çeşitli yönlerden desteklerde bulunurlar. Arkadaşlarıyla bir mekanda otururken Deveb hakkında konuşmaları bile bir destektir.
     </div>
   </div>
   <div data-gnl="1" data-kçk="1" data-ort="1">
