--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -305,18 +305,21 @@ Her bir ismin kısaltılmış yazılışları vardır.</p>
       <th>Ekran Çeşitleri</th>
       <th>
         Genel <br>
+        <i class="fa fa-clock-o" aria-hidden="true"></i>
         <i class="fa fa-mobile" aria-hidden="true"></i>
         <i class="fa fa-tablet" aria-hidden="true"></i>
         <i class="fa fa-laptop" aria-hidden="true"></i>
         <i class="fa fa-desktop" aria-hidden="true"></i>
-        <br><span data-metin="olumlu">telefon ve daha büyük</span>
+        <i class="fa fa-expand" aria-hidden="true"></i>
+        <br><span data-metin="olumlu">saat + telefon + tablet + dizüstü + masaüstü + dev</span>
       </th>
       <th>
         Ufak <br>
+        <i class="fa fa-mobile" aria-hidden="true"></i>
         <i class="fa fa-tablet" aria-hidden="true"></i>
         <i class="fa fa-laptop" aria-hidden="true"></i>
         <i class="fa fa-desktop" aria-hidden="true"></i>
-        <br><span data-metin="olumlu">tablet ve daha büyük</span>
+        <br><span data-metin="olumlu">telefon + tablet + dizüstü + masaüstü + dev</span>
       </th>
       <th>
         Orta <br>
