--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -310,7 +310,7 @@ Her bir ismin kısaltılmış yazılışları vardır.</p>
         <i class="fa fa-tablet" aria-hidden="true"></i>
         <i class="fa fa-laptop" aria-hidden="true"></i>
         <i class="fa fa-desktop" aria-hidden="true"></i>
-        <i class="fa fa-expand" aria-hidden="true"></i>
+        <i class="fa fa-television" aria-hidden="true"></i>
         <br><span data-metin="olumlu">saat + telefon + tablet + dizüstü + masaüstü + dev</span>
       </th>
       <th>
@@ -319,6 +319,7 @@ Her bir ismin kısaltılmış yazılışları vardır.</p>
         <i class="fa fa-tablet" aria-hidden="true"></i>
         <i class="fa fa-laptop" aria-hidden="true"></i>
         <i class="fa fa-desktop" aria-hidden="true"></i>
+        <i class="fa fa-television" aria-hidden="true"></i>
         <br><span data-metin="olumlu">telefon + tablet + dizüstü + masaüstü + dev</span>
       </th>
       <th>
