--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -305,7 +305,7 @@ Her bir ismin kısaltılmış yazılışları vardır.</p>
       <th>Ekran Çeşitleri</th>
       <th>
         Genel <br>
-        <i class="fa fa-clock-o" aria-hidden="true"></i>
+        <i class="fa fa-minus-square-o" aria-hidden="true"></i>
         <i class="fa fa-mobile" aria-hidden="true"></i>
         <i class="fa fa-tablet" aria-hidden="true"></i>
         <i class="fa fa-laptop" aria-hidden="true"></i>
