--- a/temalar/basit/index.html
+++ b/temalar/basit/index.html
@@ -4,67 +4,67 @@ title: Deveb Basit Tema
 ---
 <div data-gnl="1 1p" data-ort="3 3p">
   <div data-gnl="1" data-ort="1">
-    <img src="http://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
+    <img src="https://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
     <h1>Haber Başlığı</h1>
     <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p>
   </div>
   <div data-gnl="1" data-ort="1">
-    <img src="http://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
+    <img src="https://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
     <h1>Haber Başlığı</h1>
     <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p>
   </div>
   <div data-gnl="1" data-ort="1">
-    <img src="http://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
+    <img src="https://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
     <h1>Haber Başlığı</h1>
     <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p>
   </div>
   <div data-gnl="1" data-ort="1">
-    <img src="http://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
+    <img src="https://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
     <h1>Haber Başlığı</h1>
     <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p>
   </div>
   <div data-gnl="1" data-ort="1">
-    <img src="http://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
+    <img src="https://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
     <h1>Haber Başlığı</h1>
     <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p>
   </div>
   <div data-gnl="1" data-ort="1">
-    <img src="http://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
+    <img src="https://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
     <h1>Haber Başlığı</h1>
     <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p>
   </div>
   <div data-gnl="1" data-ort="1">
-    <img src="http://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
+    <img src="https://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
     <h1>Haber Başlığı</h1>
     <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p>
   </div>
   <div data-gnl="1" data-ort="1">
-    <img src="http://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
+    <img src="https://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
     <h1>Haber Başlığı</h1>
     <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p>
   </div>
   <div data-gnl="1" data-ort="1">
-    <img src="http://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
+    <img src="https://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
     <h1>Haber Başlığı</h1>
     <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p>
   </div>
   <div data-gnl="1" data-ort="1">
-    <img src="http://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
+    <img src="https://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
     <h1>Haber Başlığı</h1>
     <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p>
   </div>
   <div data-gnl="1" data-ort="1">
-    <img src="http://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
+    <img src="https://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
     <h1>Haber Başlığı</h1>
     <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p>
   </div>
   <div data-gnl="1" data-ort="1">
-    <img src="http://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
+    <img src="https://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
     <h1>Haber Başlığı</h1>
     <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p>
   </div>
   <div data-gnl="1" data-ort="1">
-    <img src="http://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
+    <img src="https://placehold.it/50x50/000/fff?text=Haber+Resmi" alt="logo">
     <h1>Haber Başlığı</h1>
     <p>Lorem Ipsum pasajlarının birçok çeşitlemesi vardır. Ancak bunların büyük bir çoğunluğu mizah katılarak veya rastgele sözcükler eklenerek değiştirilmişlerdir. Eğer bir Lorem Ipsum pasajı kullanacaksanız, metin aralarına utandırıcı sözcükler gizlenmediğinden emin olmanız gerekir.</p>
   </div>
