--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@ layout: home
         <div data-gnl="8" class="ap-deveb beri-alt-1" style="height:60px;"></div>
         <div data-gnl="1 5p" class="ap-deveb beri-alt-1" style="height:80px;"></div>
         <div data-gnl="4 5p uzun-ol">
-          <div data-gnl="5" class="beri-sol-1 beri-alt-1" style="background-color:#ccc;"></div>
+          <div data-gnl="5 uzun-ol" class="beri-sol-1 beri-alt-1" style="background-color:#ccc;"></div>
         </div>
         <div data-gnl="8" class="ap-deveb" style="height:60px;"></div>
     </div>
     <div data-gnl="2">
-      <div data-gnl="6" class="beri-sol-2 ap-deveb"></div>
+      <div data-gnl="6 uzun-ol" class="beri-sol-2 ap-deveb"></div>
     </div>
   </div>
 </div>
